--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     <footer class="absolute bottom-4 text-center w-full">
         <p class="text-gray-500 text-sm">
             © 2025 | Thiết kế và phát triển bởi
-            <a href="#" class="font-semibold text-cyan-500 hover:text-cyan-400 transition-colors">vuhoangha.dev</a>
+            <a href="https://web.facebook.com/vuhoangha.dev/"
+                class="font-semibold text-cyan-500 hover:text-cyan-400 transition-colors">vuhoangha.dev</a>
         </p>
     </footer>
 
